# ChangeLog for app-portage/portage-utils
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-utils/ChangeLog,v 1.106 2010/01/17 00:28:59 vapier Exp $

*portage-utils-0.3.1 (17 Jan 2010)

  17 Jan 2010; Mike Frysinger <vapier@gentoo.org>
  +portage-utils-0.3.1.ebuild:
  Fix fatal qfile with vdb garbage #301221 and optimize it a bit.

*portage-utils-0.3 (13 Jan 2010)

  13 Jan 2010; Mike Frysinger <vapier@gentoo.org> +portage-utils-0.3.ebuild,
  +files/post_sync, +files/q-reinitialize:
  Version bump.

  05 Dec 2009; Mike Frysinger <vapier@gentoo.org>
  portage-utils-0.2.1.ebuild:
  Stabilize for peeps #290539 by Stefan Huber.

*portage-utils-0.2.1 (05 Sep 2009)

  05 Sep 2009; <solar@gentoo.org> +portage-utils-0.2.1.ebuild:
  - ver bump to fix bug 263892

  06 Apr 2009; Mike Frysinger <vapier@gentoo.org> portage-utils-0.2.ebuild:
  Make sure we use [ rather than [[ in the makefile.

  02 Apr 2009; Mike Frysinger <vapier@gentoo.org> portage-utils-0.2.ebuild:
  Use `emake install` in src_install rather than do things by hand.

  23 Mar 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  portage-utils-0.2.ebuild:
  Emulate the old applet-list file by checking sources.

*portage-utils-0.2 (23 Mar 2009)

  23 Mar 2009; Mike Frysinger <vapier@gentoo.org> +portage-utils-0.2.ebuild:
  Version bump.

  11 May 2008; <solar@gentoo.org> portage-utils-0.1.29.ebuild:
  - stable on arm/sh

  23 Feb 2008; Jeroen Roovers <jer@gentoo.org> portage-utils-0.1.29.ebuild:
  Stable for HPPA (bug #211114).

  23 Feb 2008; Brent Baude <ranger@gentoo.org> portage-utils-0.1.29.ebuild:
  stable ppc, bug 211114

  23 Feb 2008; Brent Baude <ranger@gentoo.org> portage-utils-0.1.29.ebuild:
  stable ppc64, bug 211114

  22 Feb 2008; <solar@gentoo.org> portage-utils-0.1.29.ebuild:
  - stable amd64

  22 Feb 2008; Raúl Porcel <armin76@gentoo.org>
  portage-utils-0.1.29.ebuild:
  alpha/ia64/sparc/x86 stable
